--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+    <!-- body는 루트 엘리먼트가 될 수 없음 -->
     <div id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
