--- a/templates/home.html
+++ b/templates/home.html
@@ -92,7 +92,7 @@
 <script>
     const PostListApp = {
         // 장고의 템플릿 문법과 충돌을 피하기 위함
-        delimeters: ['[[', ']]'],
+        delimiters: ['[[', ']]'],
         data() {
             return {
                 postList: [],
