--- a/templates/home.html
+++ b/templates/home.html
@@ -15,9 +15,9 @@
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-sm-6 mb-4">
+            <div v-for="post in postList" :key="post.id" class="col-lg-4 col-sm-6 mb-4">
                 <!-- Portfolio item 1-->
-                <div v-for="post in postList" :key="post.id" class="portfolio-item">
+                <div class="portfolio-item">
                     <a class="portfolio-link" :href="'/blog/post/${post.id}/#post'">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
