--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,20 @@
 {% load static %}
 
 
-{% block title %}home.html}{% endblock %}
+{% block title %}home.html{% endblock %}
+
+{% block extra-style %}
+<style>
+    .my-img-h300 {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+    .my-post-title {
+        height: 60px;
+    }
+</style>
+{% endblock %}
 
 {% block content %}
 
@@ -16,17 +29,16 @@
         </div>
         <div class="row">
             <div v-for="post in postList" :key="post.id" class="col-lg-4 col-sm-6 mb-4">
-                <!-- Portfolio item 1-->
                 <div class="portfolio-item">
                     <a class="portfolio-link" :href="'/blog/post/${post.id}/#post'">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" :src="post.image" alt="..." />
+                        <img class="img-fluid my-img-h300" :src="post.image" alt="..." />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-subheading text-muted">[[ post.category ]]</div>
-                        <div class="portfolio-caption-heading">[[ post.title ]]</div>
+                        <div class="portfolio-caption-heading my-post-title">[[ post.title ]]</div>
                     </div>
                 </div>
             </div>
