--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div v-for="post in postList" :key="post.id" class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" :href="'/blog/post/${post.id}/#post'">
+                    <a class="portfolio-link" :href="`/blog/post/${post.id}/#post`">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
