--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -4,6 +4,21 @@
 
 {% block title %}post_detail.html{% endblock %}
 
+{% block extra-style %}
+<style>
+    .my-img-h300 {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+
+    .my-content {
+        /* white-space는 공백처리를 지정한다. pre-wrap은 new-line을 인식한다 */
+        white-space: pre-wrap;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
 <!-- Post Detail Grid-->
 <section class="page-section" id="post">
@@ -18,7 +33,10 @@
                 <i class="fas fa-copyright"></i> &nbsp;
                 <span>[[ post.category ]]</span> &emsp;
                 <i class="fas fa-tag"></i> &nbsp;
-                <span v-for="(tag, index) in post.tags" :key="index">[[ tag ]] &emsp;</span>
+                <span v-for="(tag, index) in post.tags" :key="index">
+                    <span v-if="index !== 0">, </span>
+                    <span>[[ tag ]]</span>
+                </span> &emsp;
                 <i class="fas fa-heart"></i> &nbsp;
                 <span>[[ post.like ]]</span> &emsp;
                 <hr>
@@ -31,11 +49,11 @@
                     <article>
 
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded"
+                        <figure class="mb-4"><img class="img-fluid rounded my-img-h300"
                                 :src="post.image" alt="..." /></figure>
                         <!-- Post content-->
                         <div class="mb-5">
-                            <p class="fs-5 mb-4">[[ post.content ]]</p>
+                            <p class="fs-5 mb-4 my-content">[[ post.content ]]</p>
                         </div>
                     </article>
                     <!-- Comments section-->
