이전-다음 포스트 기능

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -11,10 +11,13 @@
         height: 300px;
         object-fit: cover;
     }
-
     .my-content {
         /* white-space는 공백처리를 지정한다. pre-wrap은 new-line을 인식한다 */
         white-space: pre-wrap;
+    }
+    .my-link:hover {
+        cursor: pointer;
+        font-style: italic;
     }
 </style>
 {% endblock %}
@@ -94,13 +97,13 @@
                     <div class="card mb-4">
                         <div class="card-header">Prev Post</div>
                         <div class="card-body">
-                            This is previous post title
+                            <h5 class="text-primary my-link" @click="fetchPostDetail(prevPost.id)">[[ prevPost.title ]]</h5>
                         </div>
                     </div>
                     <div class="card mb-4">
                         <div class="card-header">Next Post</div>
                         <div class="card-body">
-                            This is next post title
+                            <h5 class="text-primary my-link" @click="fetchPostDetail(nextPost.id)">[[ nextPost.title ]]</h5>
                         </div>
                     </div>
                     <!-- Categories widget-->
