--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -34,12 +34,14 @@
             <p>
                 <span>[[ post.update_dt ]]</span> &emsp;
                 <i class="fas fa-copyright"></i> &nbsp;
-                <span>[[ post.category ]]</span> &emsp;
+                <span class="text-success my-link" @click="serverPage(post.category, '')">[[ post.category ]]</span> &emsp;
+
                 <i class="fas fa-tag"></i> &nbsp;
                 <span v-for="(tag, index) in post.tags" :key="index">
                     <span v-if="index !== 0">, </span>
-                    <span>[[ tag ]]</span>
+                    <span class="text-success my-link" @click="serverPage('', tag)">[[ tag ]]</span>
                 </span> &emsp;
+
                 <i class="fas fa-heart"></i> &nbsp;
                 <span>[[ post.like ]]</span> &emsp;
                 <hr>
@@ -112,7 +114,7 @@
                         <div class="card-body">
                             <span v-for="(category, index) in cateList" :key="category.id">
                                 <span v-if="index !== 0">&emsp;</span>
-                                <span class="text-success my-link">[[ category ]]</span>
+                                <span class="text-success my-link" @click="serverPage(category, '')">[[ category ]]</span>
                             </span>
                         </div>
                     </div>
@@ -121,7 +123,7 @@
                         <div class="card-body">
                             <span v-for="(tag, index) in tagList" :key="tag.id">
                                 <span v-if="index !== 0">&emsp;</span>
-                                <span class="text-success my-link">[[ tag ]]</span>
+                                <span class="text-success my-link" @click="serverPage('', tag)">[[ tag ]]</span>
                             </span>
                         </div>
                     </div>
