좋아요 기능 생성

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -43,7 +43,7 @@
                 </span> &emsp;
 
                 <i class="fas fa-heart"></i> &nbsp;
-                <span>[[ post.like ]]</span> &emsp;
+                <span class="test-success my-link" @click="likeCount(post.id)">[[ post.like ]]</span> &emsp;
                 <hr>
             </p>
         </div>
