--- a/templates/include/post_detail_vue.html
+++ b/templates/include/post_detail_vue.html
@@ -62,13 +62,26 @@
                     });
             },
 
-            serverPage(category='', tag='') {
+            serverPage(category = '', tag = '') {
                 console.log("serverPage()...", category, tag);
                 // 카테고리와 태그를 동시에 클릭할 순 없다
                 if (category && tag) alert(`serverPage() both args Error: ${category} and ${tag}`);
                 else if (category) location.href = `/?category=${category}#portfolio`;
                 else if (tag) location.href = `/?tag=${tag}#portfolio`;
                 else location.href = '/#portfoilo';
+            },
+
+            likeCount(postId) {
+                console.log('likeCount()...', postId);
+                axios.get(`/api/like/${postId}/`)
+                    .then(res => {
+                        console.log("LIKE-COUNT GET RES", res);
+                        this.post.like = res.data;
+                    })
+                    .catch(err => {
+                        console.log("LIKE-COUNT GET ERR.RESPONSE", err.response);
+                        alert('${err.response.status} ${err.response.statusText}');
+                    });
             },
         },
     }
