--- a/templates/home.html
+++ b/templates/home.html
@@ -50,19 +50,24 @@
                 </div>
             </div>
 
-            <nav aria-label="Page navigation example">
+            <!-- My Pagination -->
                 <ul class="pagination justify-content-center">
                     <li class="page-item disabled">
                         <a class="page-link">Previous</a>
                     </li>
+
                     <li class="page-item"><a class="page-link" href="#">1</a></li>
                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
+
+                    <li v-for="page in pages" class="page-item">
+                        <a class="page-link" href="#">[[ page ]]</a>
+                    </li>
+
                     <li class="page-item">
                         <a class="page-link" href="#">Next</a>
                     </li>
                 </ul>
-            </nav>
 
         </div>
 </section>
