--- a/templates/include/post_list_vue.html
+++ b/templates/include/post_list_vue.html
@@ -12,7 +12,23 @@
                 postList: [],
                 category: '',
                 tag: '',
+                pageCnt: 1,
+                curPage: 1,
             }
+        },
+
+        computed: {
+            pages() {
+                let pages3 = [];
+                if (this.pageCnt === 1) pages3 = [1];
+                else if (this.pageCnt === 2) pages3 = [1, 2];
+                else if (this.pageCnt >= 3) {
+                    if (this.curPage === 1) pages3 = [1, 2, 3];
+                    else if (this.curPage === this.pageCnt) pages3 = [this.pageCnt-2, this.pageCnt-1, this.pageCnt];
+                    else pages3 = [this.curPage-1, this.curPage, this.curPage+1];
+                }
+                return pages3
+            },
         },
 
         // 서버로 부터 데이터를 가져옴
