--- a/templates/include/post_list_vue.html
+++ b/templates/include/post_list_vue.html
@@ -24,8 +24,8 @@
                 else if (this.pageCnt === 2) pages3 = [1, 2];
                 else if (this.pageCnt >= 3) {
                     if (this.curPage === 1) pages3 = [1, 2, 3];
-                    else if (this.curPage === this.pageCnt) pages3 = [this.pageCnt-2, this.pageCnt-1, this.pageCnt];
-                    else pages3 = [this.curPage-1, this.curPage, this.curPage+1];
+                    else if (this.curPage === this.pageCnt) pages3 = [this.pageCnt - 2, this.pageCnt - 1, this.pageCnt];
+                    else pages3 = [this.curPage - 1, this.curPage, this.curPage + 1];
                 }
                 return pages3
             },
@@ -41,12 +41,12 @@
         },
 
         methods: {
-            fetchPostList() {
-                console.log("fetchPostList()...", this.category, this.tag);
+            fetchPostList(page=1) {
+                console.log("fetchPostList()...", page, this.category, this.tag);
                 let getUrl = '';
-                if (this.category) getUrl = `/api/post/list/?category=${this.category}`;
-                else if (this.tag) getUrl = `/api/post/list/?tag=${this.tag}`;
-                else getUrl = '/api/post/list/';
+                if (this.category) getUrl = `/api/post/list/?page=${page}&category=${this.category}`;
+                else if (this.tag) getUrl = `/api/post/list/?page=${page}&tag=${this.tag}`;
+                else getUrl = `/api/post/list/?page=${page}`;
                 // 장고로 axios를 날려서 데이터를 가져온다
                 axios.get(getUrl)
                     // 성공시
@@ -55,12 +55,34 @@
                         // 장고로 부터 받은 데이터는 res.data에
                         // 들어있고 이것을 postList변수에 넣는다
                         this.postList = res.data;
+                        this.pageCnt = res.data.pageCnt;
+                        this.curPage = res.data.curPage;
                     })
                     // 실패시
                     .catch(err => {
                         console.log("FETCH POSTLIST GET ERR.RESPONSE", err.response);
                         alert('${err.response.status} ${err.response.statusText}');
                     });
+            },
+
+            pageChanged(page) {
+                console.log('pageChanged()...', page);
+                this.curPage = page;
+                this.fetchPostList(this.curPage);
+            },
+
+            prevPage() {
+                console.log('prevPage()...', this.curPage);
+                if (this.curPage <= 1) return;
+                else this.curPage = this.curPage - 1;
+                this.fetchPostList(this.curPage);
+            },
+
+            nextPage() {
+                console.log('nextPage()...', this.curPage);
+                if (this.curPage >= this.pageCnt) return;
+                else this.curPage = this.curPage + 1;
+                this.fetchPostList(this.curPage);
             },
         },
     }
