--- a/templates/include/post_list_vue.html
+++ b/templates/include/post_list_vue.html
@@ -68,7 +68,7 @@
                         console.log("FETCH POSTLIST GET RES", res);
                         // 장고로 부터 받은 데이터는 res.data에
                         // 들어있고 이것을 postList변수에 넣는다
-                        this.postList = res.data;
+                        this.postList = res.data.postList;
                         this.pageCnt = res.data.pageCnt;
                         this.curPage = res.data.curPage;
                     })
