--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,16 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-    {% block extra-style %}{% endblock %}
+    {% block extra-style %}
+        <style>
+            [v-cloak] {display: none;}
+        </style>
+    {% endblock %}
 </head>
 
 <body>
     <!-- body는 루트 엘리먼트가 될 수 없음 -->
-    <div id="page-top">
+    <div id="page-top" v-cloak>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
