--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -5,6 +5,7 @@
 {% block title %}post_detail.html{% endblock %}
 
 {% block extra-style %}
+{{ block.super }}
 <style>
     .my-img-h300 {
         width: 100%;
