--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
 {% block title %}home.html{% endblock %}
 
 {% block extra-style %}
+{{ block.super }}
 <style>
     .my-img-h300 {
         width: 100%;
