--- a/templates/home.html
+++ b/templates/home.html
@@ -30,8 +30,8 @@
         <div class="text-center">
             <div class="section-heading">
                 <span class="h2 text-uppercase">Post List</span>&nbsp;
-                <span v-if="category" class="h6 font-italic">( Category: [[ category ]] )</span>
-                <span v-if="tag" class="h6 font-italic">( Tag: [[ tag ]] )</span>
+                <span v-if="category" class="h6 fst-italic">( Category: [[ category ]] )</span>
+                <span v-if="tag" class="h6 fst-italic">( Tag: [[ tag ]] )</span>
             </div>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
